--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 <style>
-/* ───────── RESET & CORE ───────── */
+/* RESET & CORE */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;
-          overflow-y:auto;-webkit-overflow-scrolling:touch;user-select:none}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
-/* ───────── INTRO ───────── */
+/* INTRO */
 .intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
        padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
        font-family:'Poppins';font-size:1rem;box-shadow:0 0 16px rgba(48,255,228,.32);
@@ -19,12 +18,12 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .intro .hl{color:#30ffe4;font-weight:800}
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
-/* ───────── GRID ───────── */
+/* GRID */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* ───────── BLOCKS ───────── */
+/* BLOCKS */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
        padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;
        background-size:320% 320%;transition:background-position 4s;overflow:hidden}
@@ -32,14 +31,13 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block::before{content:"";position:absolute;inset:0;border-radius:inherit;
                background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);
                mix-blend-mode:overlay}
-
 .label{z-index:2;text-align:center}
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
        padding:1rem;text-align:center;opacity:0;transition:opacity .25s}
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-/* ───────── AURA AL REVELAR ───────── */
+/* AURA */
 @keyframes auraExpand{0%{transform:scale(.3);opacity:.8}100%{transform:scale(1.3);opacity:0}}
 .reveal-aura::after{
   content:"";position:absolute;inset:0;border-radius:inherit;
@@ -48,16 +46,15 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 }
 @media (prefers-reduced-motion: reduce){.reveal-aura::after{animation:none;opacity:0}}
 
-/* ───────── PORTADA ───────── */
+/* PORTADA */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;
          flex-direction:column;padding:1rem;gap:1rem;text-align:center;
          animation:pop .6s ease-out forwards}
 @keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
-.portada img{max-width:88%;max-height:70%;border-radius:18px;
-             box-shadow:0 12px 32px rgba(0,0,0,.55)}
-.emoji-big{font-size:clamp(2.4rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));
-           animation:bounce .5s cubic-bezier(.34,1.56,.64,1)}
+.portada img{max-width:88%;max-height:70%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
+.emoji-big{font-size:clamp(2.4rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));animation:bounce .5s cubic-bezier(.34,1.56,.64,1)}
 @keyframes bounce{0%{transform:scale(.6) rotate(-6deg)}60%{transform:scale(1.15) rotate(6deg)}100%{transform:scale(1) rotate(0)}}
+
 .port-text h2{
   font-size:clamp(1.6rem,5.5vw,3rem);
   font-weight:800;
@@ -66,12 +63,13 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
   hyphens:auto;
   margin-inline:auto;
   max-width:90%;
-  background-image:var(--grad-text);
-  -webkit-background-clip:text;
-  background-clip:text;
-  color:transparent;
-  /* ELIMINADO: text-shadow: 0 2px 6px rgba(0,0,0,.3); */
+  color: #fff;
+  background-image: var(--grad-text);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
 .port-text p{
   font-size:clamp(.8rem,2.4vw,1.15rem);
   font-weight:600;
@@ -79,23 +77,15 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
   margin-top:.15rem
 }
 
-/* fallback si el navegador no soporta background-clip */
-@supports not (-webkit-background-clip:text){
-  .port-text h2{color:#fff;background:none}
-}
-
-/* ───────── CTA ───────── */
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
-     display:none;gap:1rem;z-index:100}
+/* CTA */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1rem;z-index:100}
 .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
 #otro{background:#ffd1d1;color:#000}
 #fisico{background:#d1ffd9;color:#000}
 
-/* ───────── CELEBRACIÓN ───────── */
-.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;
-      align-items:center;justify-content:center;z-index:110}
-.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;
-          background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
+/* CELEBRACIÓN */
+.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
+.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
 </head>
@@ -119,10 +109,8 @@ const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
 let libro=null;const portIdx=Math.floor(Math.random()*4);let revealed=false;
 const isURL=s=>/^https?:\/\//i.test(s||"");
 const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
-
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-/* ───────── Ajuste dinámico de título largo ───────── */
 function fitTitle(el){
   const maxH=120;
   if(el.scrollHeight>maxH){
@@ -132,7 +120,6 @@ function fitTitle(el){
   }
 }
 
-/* ───────── Crear portada ───────── */
 function buildPort(idx){
   const d=document.createElement("div");d.className="portada";
   const bigEmoji=document.createElement("div");bigEmoji.className="emoji-big";
@@ -150,7 +137,6 @@ function buildPort(idx){
   return d;
 }
 
-/* ───────── Render ───────── */
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
@@ -165,7 +151,6 @@ function render(){
   }
 }
 
-/* ───────── Interacciones ───────── */
 function click(card,i,port,labelRef){
   if(revealed&&i!==portIdx){location.reload();return;}
   if(i===portIdx&&!revealed){
