--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
-/* ───────── Intro───────── */
+/* Intro */
 .intro{
   position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
   padding:2.2rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
@@ -19,12 +19,12 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 }
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
-/* ───────── Grid───────── */
+/* Grid */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* ───────── Blocks───────── */
+/* Blocks */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
        padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;
        background-size:320% 320%;transition:background-position 4s;overflow:hidden}
@@ -32,14 +32,13 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block::before{content:"";position:absolute;inset:0;border-radius:inherit;
                background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);
                mix-blend-mode:overlay}
-
 .label{z-index:2;text-align:center}
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
        padding:1rem;text-align:center;opacity:0;transition:opacity .25s}
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-/* ───────── Portada───────── */
+/* Portada */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;
          flex-direction:column;padding:1rem;gap:.95rem;text-align:center;
          animation:pop .6s ease-out forwards}
@@ -47,11 +46,21 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .portada img{max-width:88%;max-height:72%;border-radius:18px;
              box-shadow:0 12px 32px rgba(0,0,0,.55)}
 .emoji-big{font-size:clamp(2.6rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.3))}
-.port-text h2{font-size:clamp(1.9rem,5vw,3rem);font-weight:800;line-height:1.15;
-              text-shadow:0 2px 6px rgba(0,0,0,.35)}
-.port-text p{font-size:clamp(.85rem,2.4vw,1.15rem);font-weight:600;opacity:.9;margin-top:.25rem}
 
-/* ───────── CTA actualizada───────── */
+/* Ajuste dinámico */
+.port-text-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .3rem;
+  transform-origin: top center;
+}
+.port-text h2{font-size:clamp(1.9rem,5vw,3rem);font-weight:800;line-height:1.15;
+              text-shadow:0 2px 6px rgba(0,0,0,.35);text-align:center}
+.port-text p{font-size:clamp(.85rem,2.4vw,1.15rem);font-weight:600;opacity:.9;
+             margin-top:.25rem;text-align:center}
+
+/* CTA */
 .cta{
   position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
   display:none;gap:1rem;z-index:100;
@@ -68,26 +77,18 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
   box-shadow:0 4px 12px rgba(0,0,0,0.12);
   letter-spacing:0.3px;
 }
-
-/* colores vibrantes */
 #otro{
   background:linear-gradient(135deg, #5fbfff, #1e90ff);
   color:#fff;
 }
-#otro:hover{
-  filter:brightness(1.15);
-  transform:translateY(-1px);
-}
+#otro:hover{filter:brightness(1.15);transform:translateY(-1px);}
 #fisico{
   background:linear-gradient(135deg, #b2f8c8, #42d97c);
   color:#0c2d1b;
 }
-#fisico:hover{
-  filter:brightness(1.12);
-  transform:translateY(-1px);
-}
+#fisico:hover{filter:brightness(1.12);transform:translateY(-1px);}
 
-/* ───────── Celebración───────── */
+/* Celebración */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;
       align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;
@@ -115,8 +116,17 @@ const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
 let libro=null;const portIdx=Math.floor(Math.random()*4);let revealed=false;
 const isURL=s=>/^https?:\/\//i.test(s||"");
 const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
-
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+
+function adjustScale(wrap, maxHeight = 180){
+  let scale = 1;
+  wrap.style.transform = `scale(1)`;
+  const check = () => wrap.getBoundingClientRect().height > maxHeight;
+  while (check() && scale > 0.55) {
+    scale -= 0.02;
+    wrap.style.transform = `scale(${scale})`;
+  }
+}
 
 function buildPort(idx){
   const d=document.createElement("div");d.className="portada";
@@ -126,9 +136,12 @@ function buildPort(idx){
   if(isURL(libro.portada)){
     d.append(bigEmoji,Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));
   }else{
+    const wrap=document.createElement("div");wrap.className="port-text-wrap";
     const box=document.createElement("div");box.className="port-text";
     box.innerHTML=`<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
-    d.append(bigEmoji,box);
+    wrap.appendChild(box);
+    d.append(bigEmoji,wrap);
+    setTimeout(() => adjustScale(wrap, 180), 0);
   }
   return d;
 }
